# tarang

./: .hgignore  ChangeLog.rtf  README
trunk/: CMakeLists.txt  README
trunk/info/: README  README.rtf  RUN1  Todo  prog_para.d
trunk/info/in/: diag_para.d  field_in.d  para.d
trunk/info/new4.2-input/RB/in/: diag_para.d  field_in.d  para.d
trunk/info/new4.2-input/fluid3d/in/: diag_para.d  para.d
trunk/info/new4.2-input/mhd3d/in/: diag_para.d  para.d
trunk/info/new4.21/RB/in/: diag_para.d  para.d
trunk/info/new4.21/fluid3d/in/: diag_para.d  field_in.d  para.d
trunk/info/new4.21/mhd3d/in/: diag_para.d  field_in.d  para.d
trunk/lib/: CMakeLists.txt
trunk/lib/IncFlow/: CMakeLists.txt  EnergyTr.h  IncSF.cc  IncSF.h  IncVF.cc  IncVF.h  Nlin.cc  Nlin.h  README.txt  compute_divergence.cc  compute_pressure.cc  force_spectrum.cc
trunk/lib/IncFlow/EnergyTrdir/: ET_RSprod.cc  ET_RSprod_transpose.cc  ET_compute_nlin.cc  ET_transform.cc  EnergyTr.cc  compute_cylin_ring_tr.cc  compute_flux.cc  compute_force_feed.cc  compute_helicity_flux.cc  compute_helicity_shell_tr.cc  compute_ring_tr.cc  compute_shell_tr.cc  energy_tr_B0.cc  fill_ring.cc  fill_sphere_shell.cc  prod_nlinV.cc  skpq.cc
trunk/lib/IncFlow/misc/: add_nlin_dt.cc  copy_field.cc  dealias.cc  elsasser.cc  field_k_fns.cc  force_alpha_beta.cc  force_model.cc  free_slip_vertical.cc  getmagV0.cc  hc.cc  ic_amp_phase.cc  ic_model.cc  mult_exp_visc.cc  nusselt.cc  reality_cond.cc  sincos_horizontal.cc  zero_mode_RB_slip.cc
trunk/lib/IncFlow/nlin_calc/: RSprod.cc  RSprod_transpose.cc  compute_derivative.cc  compute_nlin.cc  compute_nlin_NB.cc  compute_nlin_SF.cc  compute_nlin_VF_MHD.cc  compute_nlin_VF_SF.cc
trunk/lib/IncFluid/: CMakeLists.txt  IncFluid.cc  IncFluid.h  IncFluid_Time.cc  IncFluid_Time.h  IncFluid_constants.h  add_force.cc  add_pressure_grad.cc  compute_dt.cc  compute_rhs.cc  file_operations.cc
trunk/lib/IncFluid/force/: compute_force_ABC.cc  compute_force_Coriolis.cc  compute_force_LM.cc  compute_force_RB.cc  compute_force_TG.cc  compute_force_const_ek_hk.cc  compute_force_const_ek_hk_2Din3Dgrid.cc  compute_force_decay.cc  compute_force_dynamo_6mode.cc  compute_force_ek_hk_supply.cc  compute_force_ek_hk_supply_2Din3Dgrid.cc  compute_force_main.cc  compute_force_modes.cc
trunk/lib/IncFluid/input/: init_cond_ABC.cc  init_cond_Prinfty.cc  init_cond_RB_misc.cc  init_cond_RayleighTaylor.cc  init_cond_TG.cc  init_cond_dynamo_6mode.cc  init_cond_energy.cc  init_cond_energy_2Din3Dgrid.cc  init_cond_field.cc  init_cond_main.cc  init_cond_modes.cc
trunk/lib/IncFluid/output/: output_ET.cc  output_energy.cc  output_field.cc  output_field_old.cc  output_main.cc  output_moment.cc  output_str_fn.cc
trunk/lib/IncFluid/time_advance/: single_time_step.cc  time_advance.cc  time_advance_NB.cc  time_advance_RBslip.cc  time_advance_RBslipMHD.cc  time_advance_SF.cc  time_advance_VF_MHD.cc
trunk/lib/IncFluid/time_advance copy/: time_advance_RBslipMHD.cc  time_advance_SF.cc  time_advance_VF_MHD.cc
trunk/lib/basis_basicfn/: CMakeLists.txt  basis_basicfn.cc  basis_basicfn.h  basis_basicfn_inline.h  blitz_random.h  extern_def_vars.h
trunk/lib/fields/: CMakeLists.txt  Csf.cc  Csf.h  Cvf.cc  Cvf.h  Rsf.cc  Rsf.h  Rvf.cc  Rvf.h  fields.h
trunk/lib/fields/array_fn/: array_basic.cc  array_basic.h  array_basic_inline.h  planar_struct_fn.cc  planar_struct_fn.h  struct_fn.cc  struct_fn.h
trunk/lib/fields/universal/: universal_ET.cc  universal_ET.h  universal_basic.cc  universal_basic.h  universal_energy.cc  universal_energy.h  universal_inline.h  universal_misc.cc  universal_misc.h  universal_tr.cc  universal_tr.h
trunk/lib/four/: CMakeLists.txt  four_ET.cc  four_ET.h  four_basic.cc  four_basic.h  four_energy.cc  four_energy.h  four_inline.h  four_tr.cc  four_tr.h
trunk/lib/plainfields/: CMakeLists.txt  plainCsf.cc  plainCsf.h  plainCvf.cc  plainCvf.h  plainfields.h
trunk/lib/scft/: CMakeLists.txt  scft_ET.cc  scft_ET.h  scft_basic.cc  scft_basic.h  scft_energy.cc  scft_energy.h  scft_inline.h  scft_tr.cc  scft_tr.h  scft_tr_trial.cc
trunk/src/: CMakeLists.txt  main.cc  main.h  read_diag_para.cc  read_para.cc  read_prog_para.cc
trunk/src/IFluid/: Ifluid_diag_main.cc  Ifluid_main.cc  Ifluid_main.h
trunk/src/IMHD/: IMHD_diag_main.cc  IMHD_main.cc  IMHD_main.h
trunk/src/IPassiveScalar/: Ipassive_scalar_main.cc  Ipassive_scalar_main.h
trunk/src/IScalar/: Iscalar_diag_main.cc  Iscalar_main.cc
trunk/src/NB/: NonBoussinesq_main.cc  NonBoussinesq_main.h
trunk/src/RBslip/: RB_slip_diag_main.cc  RB_slip_main.cc  read_RB_slip_para.cc
trunk/src/RBslipMHD/: RB_slipMHD_main.cc  RB_slipMHD_main.h  read_RB_slipMHD_para.cc
trunk/test/new-test/: fftw_blitz.cpp
trunk/test/test-fftw/: CMakeLists.txt  Makefile  a.out  compile  compile-sequential  compile2  fftw_benchmark.cpp  main.cc  main_1d.cc  main_mpi-2d-c2c.cc  main_mpi-2d-cos.cc  main_mpi.cc  main_mpi2.cc  main_mpi3.cc  main_omp.cc  out.d  out1.d  out2.d  test_mpi.cc
trunk/test/test_blitz/: a.out  main.cc  main2.cc  main3.cc  main4.cc
trunk/test/test_fields/: fft_my.cc  fft_my.h
trunk/test/test_mpi/: main.cc  test_send.cc
